<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_change"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="kingapawlowska.com.repairyourpcforemployee.ChangeActivity"
    android:background="@drawable/image2">

    <Button
        android:text="@string/btnChaBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnChaBack"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/tvChaRepairStatusText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvChaRepairStatusText"
        android:textStyle="normal|bold"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="24sp"
        android:layout_below="@+id/btnChaBack"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/btnChaUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnChaUpdate"
        android:elevation="0dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinChaRepairStatus"
        android:layout_below="@+id/tvChaRepairStatusText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/editTextAlphaWhite"
        android:entries="@array/Array_spinChaRepairStatus" />

    <TextView
        android:text="@string/tvChaEstimatedCostText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvChaEstimatedCostText"
        android:textStyle="normal|bold"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="24sp"
        android:layout_below="@+id/spinChaRepairStatus"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/etChaEstimatedCost"
        android:ems="10"
        android:layout_below="@+id/tvChaEstimatedCostText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/etChaEstimatedCost"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@color/editTextAlphaWhite" />

    <TextView
        android:text="@string/tvChaPaidText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvChaPaidText"
        android:textStyle="normal|bold"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="24sp"
        android:layout_below="@+id/etChaEstimatedCost"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvChaPaidText"
        android:layout_centerHorizontal="true"
        android:id="@+id/spinChaPaid"
        android:background="@color/editTextAlphaWhite"
        android:entries="@array/Array_spinChaPaid" />

</RelativeLayout>
